# pdf2xml

./: CMakeLists.txt  INSTALL  Makefile.linux64  README
cmake/modules/: FindPoppler.cmake
src/: AnnotsXrce.cc  AnnotsXrce.h  CMakeLists.txt  PDFDocXrce.cc  PDFDocXrce.h  Parameters.h  XmlOutputDev.cc  XmlOutputDev.h  libpdftoxml.cc  libpdftoxml.h  pdftoxml.cc  pdftoxml.h
